Fix skewing image on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,9 @@
 
 @media screen and (max-device-width: 480px) {
   .App-header img {
-    width: 90%;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
   }
 }
